--- a/shared/collaboration/team/チームの規模.md
+++ b/shared/collaboration/team/チームの規模.md
@@ -1,11 +1,23 @@
-大きな組織になると、将兵にわけて、将が一方的に伝えるだけでないと、全員が声を出し合っていたら何も聞こえなくなってしまう。
-
 チームはそれぞれが判断して、それぞれが情報収集するので、小さく抑える必要がある。
 
-個人の速さを落とさずに、総合的な速さを高められる限界がチーム。
-
-単純な仕事なら、大きなチームも考えられる。
-仕事が複雑になるほど、調整しないといけないことも多くなって、機能するチームの大きさは制限される。
+個人の速さを落とさずに、総合的な速さを高められる限界がチームの大きさの限界。
 
 小さなチームを保つには、小さなプロダクトを保つべき。
 複雑で大規模なプロダクトや複数のプロダクトを扱うと、それだけドメイン知識や技術の幅も広がって、チームにもさまざまなメンバーが必要になる。共通する部分が少なくなる。関わることがない部分に関心は持ち続けられない。
+
+## チームが大きすぎる
+
+大きな組織になると、将兵にわけて、将が一方的に伝えるだけでないと、全員が声を出し合っていたら何も聞こえなくなってしまう。
+
+## チームが小さすぎる
+
+一人でも1ヶ月くらいの小さな仕事を数回進める分には問題ない。チームが必要になるのはもっと長期のプロジェクト。一人だと飽きてくるし、休みづらい。
+
+チームは5人くらいが適正で、3人になると少なすぎる。存続ギリギリ。一人でも抜けたら足りなくなるし、そうでなくとも遅いし弱い。チームは多少遅くても遠くへ行く、長く強く進行するためのもの。
+
+チームが小さすぎると足手纏いになりやすい。むしろ一人の方が早い。そうなるとメンバーのやる気も損なわれる。
+
+## その他
+
+単純な仕事なら、大きなチームも考えられる。
+仕事が複雑になるほど、調整しないといけないことも多くなって、機能するチームの大きさは制限される。
