--- a/shared/joke/ボケの例.md
+++ b/shared/joke/ボケの例.md
@@ -1,11 +1,10 @@
 - あえて的外れな回答をする
 - 言い間違いをする、言葉を捻って返す
-- 普通はしないことをする
-- 普通はすることをしない
-- あったのになかったことにする
-- なかったのにあったことにする
-- 普通は選ばないものを選ぶ
-- 普通は選ぶものを選ばない
+- 普通とは真逆の反応をする
+  - 普通はしないことをする / 普通はすることをしない
+  - あったのになかったことにする / 普通はなかったのにあったことにする
+  - 普通は選ばないものを選ぶ / 選ぶものを選ばない
+  - 安堵する場面で驚愕する / 驚愕する場面で安堵する
 - 普通は考えない理由をつける
 - 普通でないくらいたくさんある
 - 普通でないタイミングで動く
@@ -82,3 +81,5 @@ https://dekirukaiwajutu.com/category2/
 「生き延びねーとぶっ殺すぞ！」『ブラッククローバー』
 
 「もしXXなら」で無茶苦茶な仮定をするボケ。
+
+通常なら安堵する場面で驚愕する、驚愕する場面で安堵する、といったボケ。真逆の反応をする。
