--- a/shared/society/tips/人を疑う.md
+++ b/shared/society/tips/人を疑う.md
@@ -3,3 +3,5 @@
 人を害するのは、人を疑っているとは言えない。
 
 事件によって利を得た者は犯人として最も怪しいけど、確実ではない。ただ、疑うべきではある。
+
+責任を取らなくていい立場の方が人を疑いやすい。疑うということは立場を決めずに保留して行動を止めることで、当事者になるとそうはいかない。
