--- a/shared/thinking/data/analysis/データ分析.md
+++ b/shared/thinking/data/analysis/データ分析.md
@@ -34,3 +34,5 @@ https://qiita.com/aokikenichi/items/9d829910efd5dff0b79f
 
 データ分析の目的は情報を作ること。
 情報とは判断材料だ。リスクを下げるものだ。
+
+データ分析は例外に弱い。例外は人間が個別に処理しないと取り逃がす。
