--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -89,3 +89,8 @@
 
 地声の高音はダンベル上げみたいなもので、少しずつ高い音が出せるように鍛えないと出ない。
 声帯を伸ばして、維持する筋肉が必要。高くなるほど伸ばすのも伸びたまま維持するのも大変だけど、同じ伸びなら繰り返せば楽になる。まずは一瞬だけ伸ばす練習から。一度伸ばしたら、持続時間も伸ばす。
+
+高い声で歌う時は高いところだけ力を入れるんじゃなくて、常に強い息を維持しないといけない。テンションは緩めない。声帯だけ伸ばす。
+
+通常、歌で1音のために使う音は4音くらいしかない。１オクターブ以内に収まる。コードに含まれる音。
+まずはそのコードに合わせた声のテンションにして、その中で声帯を伸縮させて声を出す。
