--- a/shared/music/tips/リズムを取る.md
+++ b/shared/music/tips/リズムを取る.md
@@ -11,3 +11,5 @@
 3拍子のリズムは3つとも大きめに体を揺らすくらいでいい。強中中くらい。
 
 まずは簡単なリズムから始めて、より複雑なリズムを扱えるようにする。
+
+リズムを取るには、ただアクセントやテンポに合わせるだけじゃなくて、音符の長さをきっちり一定のひりつにする。四分音符がたまに3.5分とかになってはいけない。
