--- a/shared/singing/tips/歌のリズムを取る.md
+++ b/shared/singing/tips/歌のリズムを取る.md
@@ -84,3 +84,6 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 これができないと喉で不自然に息をコントロールしてしまって、リズムがずれやすい。
 
 間奏中も体でリズムを取る。曲によってはフェイクを入れてもいい。同時に横隔膜の力を抜いて、下げ直す。リセットする。
+
+まずは息だけでアクセントも含めたリズムと基礎のメロディを取る。
+この段階では息が漏れてもいいので、ハミングでもいい。慣れてきたら口を薄く開けて声帯で受け止める。
