--- a/shared/voice/training/tips/腹から声を出す.md
+++ b/shared/voice/training/tips/腹から声を出す.md
@@ -49,3 +49,12 @@ https://youtu.be/u6esSnfp_Bk?si=MHiWE6oXoJUIPVO4
 しゃっくりのように声を強く高くすることができると腹から声が出てる。
 
 ドナルドの声で「クワクワクワクワ」って素早く繰り返す練習。
+
+息は強いまま、声帯のコントロールだけでごく小さな地声を出す練習。
+声帯を下げたまま、腹からの息で出さないとごく小さな地声にならない。
+
+しっかり発声するのは普段の雑に声を出す感覚とは結構違う。
+
+嘔吐する時の感覚に近い。
+
+尻を締める。
