--- a/shared/government/三権分立.md
+++ b/shared/government/三権分立.md
@@ -1,3 +1,7 @@
-立法権 legislative power
-行政権 executive power
-司法権 judicial power
+1. 立法権 legislative power
+2. 行政権 executive power
+3. 司法権 judicial power
+
+のそれぞれを独立させて、影響がないようにする。
+
+法律を定め、法律を守り、紛争を解決する。
