--- a/shared/government/政府.md
+++ b/shared/government/政府.md
@@ -1,3 +1,5 @@
+統治。
+
 政府の予算はすべて国民のために用いなければならない。海外に投資したり支援したりする場合は十分な利益が得られるようにするべき。
 
 外国人支援もあくまで治安維持のためであって、場合によっては切り捨てるべき。捕まえて国外追放でもいいし、国ごと出禁でもいい。
@@ -5,3 +7,10 @@
 国民全員を生かす試みは資源が十分に確保できないと実現できない。
 
 政府の活動は国家を維持するためのものであって、愛とかではない。
+
+統治のポイントは、一つにまとめること。秩序を作ること。
+
+## 『今さら聞けない！政治のキホンが 2 時間で全部頭に入る』馬屋原吉博
+
+中学レベルの公民の本。基礎をざっとさらうのにちょうどいい。
+Amazon Prime で無料で読める。
