--- a/shared/people/knowing/人を知る.md
+++ b/shared/people/knowing/人を知る.md
@@ -120,3 +120,28 @@
 
 人も結局、状態、反応、刺激の3点を観察する。
 その中で、特に人のどこを見るべきか。
+
+自分や人を知るために何を知るべきか。
+
+習慣と思考、
+好み、
+好みも何かを目の前にした反応、
+健康、
+福祉、
+人間関係、
+親族、
+友人、
+恋人、
+長期的なfeaturesと短期的なpreferences、
+仕事や能力、
+趣味やこだわり、
+外見、
+髪型や服装、
+感情表現、
+言語、
+国籍や出身、
+政治、
+宗教、
+哲学、
+歴史、
+展望、
