--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -44,3 +44,5 @@
 小手先のテクニックに時間をかけない。
 小手先のテクニックのいいところは、片手間でできるところだ。すぐに使い始められる。
 時間をかけるならもっと根本的なフィジカルや基礎技術に時間をかける。
+
+練習が足りないうちはとにかく全部意識してやらないといけないのが難しい。ひとつずつ無意識に落とし込んでいくのが大事。
