--- a/shared/voice/training/exercises/リップロール.md
+++ b/shared/voice/training/exercises/リップロール.md
@@ -83,3 +83,5 @@ https://youtu.be/CJQRga_MxjQ?si=alWDmYbCHVLSAlef
 リップロールは唇を柔らかく使えればいいので、スケール練習までする必要はない。
 
 リップロールは呼気圧を安定させるのがコツ。
+
+リップロールは息で揺らしているので、息を漏らさないとうまく鳴らない。
