--- a/shared/risk/賭け.md
+++ b/shared/risk/賭け.md
@@ -8,11 +8,8 @@
 まず、当たったら10倍、外れたら0、みたいな一点賭けと、外れてもある程度回収できるけど当たっても2倍、のような賭け方がある。保険を用意するかどうか。
 また、保険にもどれくらいの保険を用意するかで異なる。保険にコストをかければかけるほど、成功した場合の収支は小さくなる。また、大外れはどっちにしても0になる場合が多い。
 
-競馬で16頭全てを100円ずつ買って、オッズが2倍から160倍まであった場合、大当たりは16万円から支払いを引いた158,400円、大外れは200円から支払いを引いた-1,400円となる。これだと賭け金は実質1400円。
+競馬で16頭全てを100円ずつ買って、オッズが2倍から160倍まであった場合、大当たりは16万円から支払いを引いた158,400円、大外れは200円から支払いを引いた-1,400円となる。これだと1600円賭けてるけど、200円は返ってくるので実質的な賭け金は1400円。必ず返ってくる分があるならそれも含めて賭け金を考える。
 まぁ、ギャンブルとしては面白くないし、ほとんどの場合はオッズが16倍以下の馬が勝つようにオッズが設定されているので普通はプラスにはならない。
 ここからもっと保険を減らして収支がプラスになるラインを見極めるのがギャンブル。
 
-常に掛け金を考慮して収支を考えないといけない。
-例えば、25万円賭けて当たれば4倍だったら、「当たれば100万円、負けたら0」と考えるのではなく、「当たれば+75万円、負けたら-25万円」と考えないといけない。
-
-持ち金を全部賭けるんじゃなくて、まず持ち金を増やす。
+二つの予測のどちらに転んでも利益を得られるなら、賭けにはならない。安定行動。
