--- a/shared/human/body/nerve/脳の性能を維持する.md
+++ b/shared/human/body/nerve/脳の性能を維持する.md
@@ -1,3 +1,7 @@
+- 短期記憶をできるだけ使わない
+  - ノートに書き出しながら考える
+  - タスクを手元に残さない、早く終わらせる
+
 タスクが頭を圧迫していると、他のことを考える余裕が削られる。
 
 貧乏も脳の機能を落とす。
@@ -7,3 +11,5 @@
 
 4色に分かれた箱を持って、4色のボールを次々と同じ色の箱に入れる訓練。
 https://x.com/sg3lu/status/1964906541473321361?s=12
+
+脳のメモリは小さいので、短期記憶はメモに書き出して、脳はプロセッサーに特化した方が効率的。
