--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -1,3 +1,5 @@
+喉を広げる、喉を開く。
+
 ## 概要
 
 - 顎を少し上げる（気道をまっすぐにする）
@@ -241,3 +243,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 喉を締めずに高い「え」の練習。潰れた感じだけど、喉は楽に。
 
 頬を使って口を上に開ける練習。
+
+喉を開いて高い声を出すには、息が強くないといけない。息が強くても喉が開いていれば柔らかい声になる。
