--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -57,3 +57,5 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 高いと硬くなりがち。高いところを地声で柔らかく歌いたい。
 
 地声は柔らかくないといけない。わざわざ裏声にしないと硬いようでは良い地声とは言えない。
+
+息の圧だけで高い声を出せば、強くても柔らかい声になる。まずは息を信じて、喉を開く。
