--- a/shared/pain/弱者.md
+++ b/shared/pain/弱者.md
@@ -15,3 +15,9 @@
 
 弱者は資源を持たない。
 大きな体も財産も人脈もない。結果として選択肢が少ない。
+
+ただ弱いだけでなく、弱いままでいるのが弱者。
+資源を少しずつでも増やすべき。
+
+弱者は怠惰である。
+ただ、栄養面でコストを抑えないといけなくて、仕方ない場合もある。
