--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -6,6 +6,7 @@
 
 - 社交がある
 - 共通の目的がある
+- システムがある
 - 指揮系統（ヒエラルキー）がある
 
 ## その他
@@ -195,3 +196,5 @@ https://diamond.jp/articles/-/49655
 組織が大きくなると目が行き届かなくなるので、政治が横行しやすい。
 
 普通、非公式な組織に大きな戦力はない。そもそも公権力と拮抗するほどの力があったら表でも好き勝手できる。漫画みたいに裏稼業に強い人がいるのはフィクション。
+
+システムがないなら組織とはいえない。
