--- a/shared/human/being/well/幸福.md
+++ b/shared/human/being/well/幸福.md
@@ -262,3 +262,5 @@ https://www.sustainability-hub.jp/column/about-personal-relationships/
 
 仕事やビジネスは人生の一部でしかない。
 同様に、家庭や結婚、趣味、なども人生の一部でしかない。一つだけを求めすぎると、人生全体としては不幸になりやすい。
+
+「私が幸せであるのは幸せをつかもうとする者だからだ」（スパロボY）
