--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -145,3 +145,5 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 「お前のようにただ生きているだけの人間と同じだと思うなよ！」
 「それの何が悪い！？死んじまったら、何も出来ない！」
 『スパロボY』
+
+「生命ある限り、敗北はない」（スパロボY）
