--- a/shared/health/tips/白湯の作り方.md
+++ b/shared/health/tips/白湯の作り方.md
@@ -7,4 +7,4 @@ https://waterone.jp/media/sayu-water/
 
 水道水の場合は、鍋で 10-15 分ほど煮立たせる。
 
-レンジならマグカップ1杯、250mLを500Wで2分くらい。
+レンジならマグカップ1杯、250-300mLを500Wで2分くらい。お茶も同じ。
