--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -50,3 +50,5 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 「自己満足。大いに結構じゃないですか。俺はそいつが実は人生ってヤツではないかと思ってます。」『うみねこのなく頃に』
 
 「ボクの人生ですよ！？」（宝鐘マリン）
+
+「時には本能に...遺伝子に逆らい、心に従うのが人間なのでしょう」（スパロボY）
