--- a/shared/development/早すぎる最適化.md
+++ b/shared/development/早すぎる最適化.md
@@ -3,3 +3,8 @@
 品質はできるだけ早い段階で8割を目安に高めて、早い段階で検証するのが大事。検証を元に真の要求を明らかにして、当初の予定より少しでも良いものを目指す。
 
 細かい設計が早すぎるとコンセプト自体が変わった場合に対処できない。まずは動かせるようにしてフィードバックする。仕様が固まってきたら再設計する。
+
+早すぎる最適化は無駄なコストだけど、整理するのが遅すぎるとそもそももう最適化されない。放置される。
+イテレーションなどの単位で最適化まで必ず終わらせるべき。最適化にちょうどいい単位でイテレーションを区切る。
+
+イテレーションの完了までに最適化やテストまでできないなら、ただのノロマ。手が遅いだけ。
