--- a/shared/life/生殖.md
+++ b/shared/life/生殖.md
@@ -17,3 +17,6 @@
 人間の子孫を残せる条件としては、生存できて、できれば親も要らなくて、生殖に積極的で、好かれること。
 
 生殖は生存に優先する。
+
+生殖能力のある大人が生き残れば子供はまた増やせるという面もあるし、子供が生き残ればより長く全体が生き残れるという面もある。
+ただ、親を失った子が大人になるまで生き残れないと後者は諦めるしかない。
