--- a/shared/communication/frameworks/negotiation/交渉.md
+++ b/shared/communication/frameworks/negotiation/交渉.md
@@ -37,3 +37,5 @@ https://qiita.com/Saku731/items/c43137a6f4bf7166490a
 - 勝負ではない
 - 事実でないなら口にしない
 - チャンスを逃さない
+
+敵同士であるからこそ、没交渉ではいけない。むしろ敵とこそよく話すべきだ。敵にこそ誤解されやすい。
