--- a/shared/human/being/well/経済的安定.md
+++ b/shared/human/being/well/経済的安定.md
@@ -25,3 +25,5 @@
 
 安定収入を得るための活動は週3くらいに抑えて、もっと儲けられるようにリスクを取らないと労働からは抜け出せない。
 そもそも生きるためだけに週5も働くのはコスパが悪い。
+
+開発の会社で安定収入のために保守契約を結ぶことがあるけど、安定収入のために時間を使いすぎるのは、儲けのわりに人件費がかかりすぎたり、社員のエンゲージメントが下がったりすることが多い。
