--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -332,3 +332,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 プロのアーティストとして生きるには、市場を作れないといけない。
 
 「よい」を追求する。
+
+芸術的・文化的に貧しい国は、他の国にとっても価値がない。戦争したりしても別に民衆ごと殲滅したっていい。
