--- a/shared/decision/planning/計画.md
+++ b/shared/decision/planning/計画.md
@@ -110,3 +110,6 @@ plan, project, program はどれも計画。
 プランニング自体はexecutionというよりもdecisionとかか？
 
 物事には順序がある。
+
+「そりゃあ、計画通り進めば、どんなものでも上手くいくよ。でも……ねぇ」
+『水属性の魔法使い』
