--- a/shared/pain/救い.md
+++ b/shared/pain/救い.md
@@ -21,3 +21,5 @@
 医療だけでなく、救助の段階でも助けられる人を選別する。リソースは有限である。
 
 人を助けるのはその人も資源として見れるからであって、人を資源として見ない人が誰かを助けているのはおかしい。何か裏があると思っていい。
+
+甘さは弱みでもあるが、誰かにとっては救いでもある。
