--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -99,3 +99,7 @@ businessやcommunityも社会の一部。
 社会というのは常に狂っているもので、いちいち「社会が狂っている」というのはおかしい。万人に合っている社会はない。
 
 法律は最低限のルールなので、暗黙的なマナーの範囲まで守らないと周りに認められない。社会的に認められなければ排除される。特に悪いものは法律によって暴力的に制圧される。
+
+「郷に入りては郷に従え」
+
+「来るもの拒まず」は「郷に入りては郷に従え」ができる人に限る。
