--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -195,3 +195,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 喉を広げて、でも喉に力は入れない。喉を狭くする要因を排除する。
 
 sで長く発声したままため息を吐くように声を出す練習。
+
+喉を下げるだけなら舌で押す方法もあるけど、それでは喉が狭くなる。あくびみたいな声になる。
