--- a/shared/voice/tuning/tips/喉を守る.md
+++ b/shared/voice/tuning/tips/喉を守る.md
@@ -23,3 +23,5 @@ https://youtube.com/watch?v=nK9rWAoVoPg&si=vLT3naEum60UN55i
 まずはうがい。
 白湯、ビタミン、のど飴などでウイルスの除去と保湿。
 加湿器は最低でも40%から50%くらいは保つ。
+
+龍角散のど飴を水に溶かして飲むのもいい。
