--- a/shared/music/tips/手拍子でリズムをとる.md
+++ b/shared/music/tips/手拍子でリズムをとる.md
@@ -9,3 +9,5 @@ https://youtu.be/mPh3LqAi42E?si=YKd02xTbjdSJ5fo3
 一定の間隔で開いて閉じての拍手は4拍子の裏拍で開いて8拍子で捉えるような打ち方だけど、ギリギリまで開かない打ち方はその倍以上の拍子で捉えられる。
 
 手拍子が間に合わない速さだと、弱いアクセントを省略して4拍子の1,3拍目だけ叩くとか、3拍子の1拍目だけ叩くとかでもある程度リズムは取れる。
+
+両手を離す時間を短くする手拍子は、とにかく離さないようにするというより、4拍子の3拍半まで数えてから離す。普通にパンパンだと2拍まで。
