--- a/shared/risk/management/危機への対処.md
+++ b/shared/risk/management/危機への対処.md
@@ -7,3 +7,12 @@
 
 対処できないことは割り切って捨てるしかない。
 あまり考えても仕方ない。
+
+危機に対処する。
+
+1. 危機を洗い出す
+2. 対処しなければならない危機を絞り込む
+   1. 対処できない危機を捨てる
+   2. 対処しなくていい危機を捨てる
+3. 避けられる危機を避ける
+4. 避けられない危機に備える
