--- a/shared/education/教養.md
+++ b/shared/education/教養.md
@@ -46,3 +46,9 @@
 
 現代日本の学校であれば、流行りのテレビ番組とか、流行りの歌とか、流行りのゲームとかが教養である。
 大人になったら政治とか経済とかの話も入ってくる。
+
+教養とされるものは文化によって異なる。さらに同じ国でも階級や性別、職業など、関わる人たちによって違う。
+
+地位が高くなるほど広い教養が求められるのは、関わる人種が増えるから。たとえば経営者であれば自分の会社の社員だけでなく、他の会社の経営者や社員ともつながりがあるものだ。相手の文化に合わせられないと社交ができない。
+
+教養は教育というよりも社交のために必要なので、社交の文脈のほうがいいかも。
