--- a/shared/government/democracy/民主政.md
+++ b/shared/government/democracy/民主政.md
@@ -3,3 +3,8 @@
 民主政には、愚かな人間の意思決定を遅延させる効果があるし、ないといけない。仕組みによって意思決定を遅延させる。意思決定が遅延されるほど正しい意思決定に修正される可能性が高い。
 
 意思決定を遅延するのが民主政の役割だ。
+
+貧困国で大統領が独裁者になりがちなのは、そもそも教育のレベルが低いと民主制は厳しいからでは？
+
+国民が国家を運営するレベルにないのに形だけ作ると汚職だらけになる。
+国民のレベルが低かったら行政などに権力を集中させてはいけない。
