--- a/shared/action/恐怖.md
+++ b/shared/action/恐怖.md
@@ -1,3 +1,5 @@
+# Fear
+
 成功のビジョンがないと、失敗を恐れがち。
 
 成功や失敗、勝ち負けよりも、学習のために行動するべき。
@@ -36,3 +38,7 @@
 
 恐怖は判断を鈍らせる。
 理由のわからない失敗は恐怖を高める。
+
+意固地に話を聞かなかったりするのは、自己防衛の一種。狂気、発狂、パニック、などの基礎にあるのは恐怖。
+
+自分の身を投げ打ってでも他人を守ろうとするなら、恐怖は克服される。
