--- a/shared/care/tips/関心を持つ.md
+++ b/shared/care/tips/関心を持つ.md
@@ -26,3 +26,7 @@
 手間や時間をかける。
 
 他人に関心を持つには、自分をよく知って、自分と他人を比較する。まずは自分に関心を持つ。
+
+相手が好きとか嫌いとか以前に、まず関心を持って観察するようにしないと褒めも貶しもできない。
+
+LoveよりもCareが先。注意して見る。
