--- a/shared/decision/判断を早くする.md
+++ b/shared/decision/判断を早くする.md
@@ -34,3 +34,7 @@
 信頼性の低い意見しか集められなかった場合、判断材料としてはいまいち。あくまで参考程度にするか、大量に集めていいところを取る。
 
 判断を早くするために、Tier表を作るのもいい。優先度を決める。
+
+判断を早くするということは、少ない情報で決断するということでもある。
+情報が少なすぎて判断の質が悪いと、判断が早くなってもうまくいかない。
+判断・行動が早くなるメリットと、判断の質を上げるメリットのトレードオフを考えないといけない。
