--- a/shared/design/関心の分離.md
+++ b/shared/design/関心の分離.md
@@ -12,3 +12,8 @@
 プレゼンで 1 つのメッセージに 1 つの責務というのは、どう動いて欲しいか。内容が一つというわけではない。
 
 スコープが狭かったら、変数名はxとかで済む場合も多い。まずはスコープを狭くするのが大事。
+
+見た目が同じで機能が違うものを同じところに置くとややこしい。
+
+キッチンハイターとトイレハイターの成分が似たようなものでも、何となく分けたい。
+それに、キッチンの掃除用具はキッチンに、トイレの掃除用具はトイレにまとまって置いた方が便利。
