--- a/shared/government/legal/健康保険.md
+++ b/shared/government/legal/健康保険.md
@@ -7,3 +7,6 @@
 扶養家族がいると、国民健康保険と比べて、世帯の納付額を抑えられる可能性がある。
 
 健康保険は所得税と同じく課税所得をもとに計算される。
+
+健康保険制度はQOLのためでもあるけど、まずは伝染病対策。
+正直、伝染病以外の個人的な病気まで保険で支えるのはやりすぎだと思ってる。
