--- a/shared/lifestyle/meal/food/冷凍した方がいいもの.md
+++ b/shared/lifestyle/meal/food/冷凍した方がいいもの.md
@@ -6,4 +6,6 @@
 
 カレーを次の日に回すときは氷を入れちゃってもいいかも。どうせ固くなりすぎて水入れがち。
 
-レタスは冷凍して鍋や炒め物の具にすることもできるけど、バキバキになるのでできれば冷蔵のうちに食べきりたい。
+葉物は冷凍して鍋や炒め物の具にすることもできるけど、長く置くとバキバキになって細切れになるのでできれば冷蔵のうちに食べきりたい。
+
+にんにくやしょうがは冷凍してもそのまま包丁で切れる。
