--- a/shared/art/芸術と解釈.md
+++ b/shared/art/芸術と解釈.md
@@ -7,3 +7,5 @@
 解釈を表現する。
 
 アートでは、単なる一般的な「意味」ではなく、自らの「解釈」を伝えなければならない。そして自らの「解釈」が新たな「意味」として世界に付け加えられる。自らの「解釈」が「正解」になる。
+
+芸術は作者の解釈を表現するのが重要で、作者の主張が入ってしまうと汚くなる。政治的主張なんかはそもそもテーマも凡庸で擦り切れてる。
