--- a/shared/collaboration/organization/hierarchy/指揮.md
+++ b/shared/collaboration/organization/hierarchy/指揮.md
@@ -26,3 +26,9 @@ Conduct
 
 組織やチームではタイミングを合わせるのが大事。
 組織では同じタイミングが基本、チームではもっと複雑に組み合わせる。
+
+指揮を始める前に、誰の指示に優先して従うべきか、指揮系統を部下全員に周知しないといけない。
+誰に従えばいいのかわからないと判断が遅れる。
+
+上司は、その上司より下の上司が全員同じ指示を出すように指示を一貫させる。下の上司をクビにしたり、教育したり。いちいちズレていると判断が遅れる。
+指示が一貫してないということは、下の上司が上の上司の指示を聞いていないということ。上司が指示を聞いてないのに部下が指示を聞くわけがない。
