--- a/shared/finance/利益.md
+++ b/shared/finance/利益.md
@@ -56,3 +56,5 @@ Profitはどちらかというと静的で物質的なもの。財産とか。
 
 利益は、とにかく増やすのではなく、損益分岐点をまず考えないといけない。
 どれくらいの規模で利益が出るのか把握して、少なくともそれだけの規模を目指す。
+
+真意や本音といったものは、結局のところ、「どういう利益が動いているか」でしかない。
