--- a/shared/politics/政治.md
+++ b/shared/politics/政治.md
@@ -110,3 +110,9 @@ business は交換条件、取引による政治。
 政治は社交の一つの側面。人が集まったらどうしても競合や対立が起きる。しかし、政治だけが社交ではない。
 
 政治では主導権を握るのが大事。
+
+戦争を起こさないために、敵を作らない。
+しかし、どうしても敵になってしまう勢力はある。
+
+紛争や対立を解決するための最終手段は戦争だ。
+ただ、戦争はコスパが悪いし、どこまで広がるか完全にはわからない。人の手に負えない。
