--- a/shared/lifestyle/clothing/服.md
+++ b/shared/lifestyle/clothing/服.md
@@ -57,3 +57,8 @@
 対して日本みたいに湿度が高いところは薄着。肌を隠すとジメジメして暑いし。日差しが熱かったら日傘。
 
 服は結局洗濯するたびにほつれていくので、安いのをこまめに買い替えたほうが綺麗ではある。特に綿。コートとかほとんど洗濯しないものは別だけど。
+
+- 形
+- 色
+- 着心地
+  - 触り心地
