--- a/shared/lifestyle/clothing/服の違い.md
+++ b/shared/lifestyle/clothing/服の違い.md
@@ -1,28 +1,126 @@
-マテリアル・素材・生地による違い:
+## 概要
 
-- 絹（シルク）
-- 綿（コットン）
-- 麻（リネン）
-- ポリエステル
-- デニム
+- 形
+  - 留め具（ボタン、ファスナー、など）
+- 色
+  - 染色
+  - パッチワーク
+- 質感
+  - 素材・生地（マテリアル）
+  - 織り方・編み方（テキスタイル）
+    - 経糸
+    - 緯糸
+  - 縫い目
+- 着心地
+  - 重さ
+  - 触り心地
+  - フィット感
+  - 保温性
+  - 保湿性
+- 印象
+  - 雰囲気
+    - フォーマル
+    - カジュアル
+  - 季節感
+  - 高級感
+- 由来
+  - 洋服
+  - 和服
+  - その他の民族衣装
 
-テキスタイル・織り方・編み方による違い:
+## 形
 
-- ブロード
-- ガーゼ
-- オックスフォード
+- 服
+  - トップス
+    - カットソー
+  - ボトムス
+    - パンツ
+    - スカート
+  - ワンピース
+- 服飾品・アクセサリー
+  - 靴
+  - 鞄
+  - 帽子・冠
+  - 髪飾り
+  - 眼鏡・サングラス
+  - 耳飾り
+  - 首飾り
+  - 腕輪
+  - 足輪
+  - 指輪
+  - 手袋
+  - 靴下
+
+頭が大きいなら、厚手のジャケットやパーカーで肩幅を広げるとバランスがいい。
+
+## 色
+
+まずは白黒が基本。
+白黒を基本に、色物や柄物を一点だけ入れる。
+
+- 白
+- 黒
+- ベージュ
+- ライトグレー
+
+あたりは他の色の邪魔にならない。
+
+赤を取り入れると魅力的に見えやすい。
+
+上下で色を揃えるなら、肌を出す。色は濃い色にして、肌の白さを強調する。
+
+服の色の基本はグラデーション。肌も含めて。
+
+カラーのボトムスなら上は白か黒でシンプルにするか、色を合わせる。
+
+メインカラーとしては自分に合う色。
+パーソナルカラーが参考になる。
+
+近い色の服で合わせるなら、色をしっかり合わせないと雑に見える。
+
+## マテリアル
+
+- 天然繊維
+  - 植物繊維
+    - 綿（コットン）
+    - 絹（シルク）
+    - 麻（リネン）
+  - 革（レザー）
+  - 毛
+    - 羊毛（ウール）
+    - 羽毛（フェザー）
+      - ダウン: 水鳥の胸の辺りの羽毛
+- 化学繊維
+  - ナイロン
+  - ポリエステル
+- フリース
+- スウェット
+
+## テキスタイル
+
+織り方・編み方のこと。
+
+- 織物
+  - 平織
+    - ブロード: 高密度の平織
+    - ガーゼ: 粗い織物
+    - デニム
+  - 綾織・ツイル
+- オックス・オックスフォード
 - ローン
 - サテン
-- ツイル
-- ニット
+- ツイル・斜文織
+- ツイード: 羊毛を紡いだ生地
+- ニット・編み物
 - ジャージ
+- その他の加工
+  - キルト、キルティング: 模様縫いの生地で中綿を挟んだ生地
 
-用途による違い:
+https://ja.wikipedia.org/wiki/%E5%B9%B3%E7%B9%94
 
-- ジョガーパンツ
+## その他
 
-形状による違い:
+セーターはニットで作られたトップス。
 
-- パンツ
-- スカート
-- カットソー
+装飾品や宝飾品は服飾品の一種。
+装飾品は特に美しさを持つもの。宝飾品は特に金属や宝石によるもの。
