--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -83,3 +83,15 @@ Lover.
 
 年齢差がある恋人に対して何か言う人がいるけど、成人と成人の間のプライベートな関わりに他人が口出しするのがそもそも傲慢すぎる。
 口出ししていいのは子供に手を出した時だけ。
+
+完全に恋愛抜きの友人になってから恋愛の話題を振るのは気まずい。
+はじめから恋人の候補として関係を始める。
+
+相手が恋愛関係を望んでいない場合、こちらだけが恋愛関係を望むと敬遠される。
+
+知人、友人、恋人の順序ではなく、知人からいきなり友人と恋人に分かれる。
+
+恋人は友人の延長ではない。
+まずセックスが前提にあって、それから友人のような関係に落ち着くこともあるだけ。
+
+パートナーになれなかった恋人はペットになる場合もある。
