--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -335,3 +335,9 @@ workとinfluenceは近い。
 必要なときに、必要な分だけ仕事することに価値がある場合もある。
 
 役割が明確すぎる場合、対応範囲が狭い場合もあるので、具体的・明確であれば良いというわけでもない。
+
+日本語で「仕事」といったときはWorkよりもBusinessの要素が強い。
+あまり個人的な働きとか、悪事みたいなものを仕事とは言わない。
+Workは「働き」とでも言ったほうがいいかも。
+
+悪事を働くのも働きではある。
