--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -259,3 +259,7 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 息を強くしても太くしない。細くするというよりは、太くならないように抑える。太い息は息漏れに繋がるし、喉を痛める。
 
 お腹に力を入れても外側の腹筋ばかりに力が入っていると声帯にうまく圧がかからない。
+
+声を出す時は息に圧がかかった状態を維持する。
+
+息に圧をかけるのは横隔膜が中心で、そこからさらに下腹で胸郭を太鼓のように叩いてリズムを取る。
