--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -133,3 +133,5 @@ explanation も参照。
 根拠を示すより、相手の根拠を追求する。
 
 証明は、命題が真か偽かを明らかにする。単純に「あるかないか」の場合もあるし、「XXはXX以上である」みたいに数字で決まる場合もある。「真である確率はXX%である」みたいに確率的な結論が出る場合もある。
+
+根拠は誰かに説明して説得するためにあるので、自分の行動に根拠は必要ない。
