--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -17,6 +17,25 @@
 
 息が弱いまま喉を開いても声にならない。まずは息を強くするのが先。むしろ息が弱いから喉が締まる。
 
+## 喉を開く注意点
+
+喉を開いて声を出そうとすると、喉でつけていた抑揚がなくなる。腹でつけないといけない。
+最初は単調にでも喋れるようにするところから始める。
+
+## 喉を開く手順
+
+1. 喉を開いて息を吸う（腹式呼吸で横隔膜を下げて、「ほぉー」っと吸う感覚）
+2. 喉を開いたまま横隔膜の力を抜いて息を吐く
+3. 喉を開いたままゆっくりと横隔膜の力を抜いて息を吐く
+4. そのまま声帯を閉じて声を出す（息漏れが多いので裏声気味になる）
+5. 喉を開いて横隔膜は下げたまま（息を吸う感覚のまま）下腹を押し上げて息に圧をかける
+6. そのまま声帯を閉じて声を出す（この段階で自然に声が揺れて、息は漏れない）
+7. 抑揚をつけずに喋ってみる（般若心経でも寿限無でも外郎売でも）
+8. 抑揚をつけて喋ってみる（喉で抑揚をつけられないので、腹でつける。横隔膜を太鼓に見立てて下腹で叩く感覚）
+9. ピッチを変えても喉を開いたまま維持する
+
+喉を開いて呼吸をする、というところからできないと声を出しながら喉を開くこともできない。
+
 ## 喉が下がった声
 
 フランコ・コレッリ、ヨーゼフ・メッテルニヒ、ビルギット・ニルソン、チェーザレ・シエピの例。
