--- a/games/Street-Fighter/Six/tips/ランクを上げる.md
+++ b/games/Street-Fighter/Six/tips/ランクを上げる.md
@@ -1,3 +1,5 @@
 ハイマスを目指すと、差し返しが結構ネックになる。反応して、判断して、操作するには、訓練が必要。ランクマを回すだけでは上手くならない。
 
 1500MRで勝つには、まずグラップを捨てて、しっかり対空するところから。
+
+ダイヤやマスターからの差はほんの少し。起き攻めがほんの少しぬるいとか、ほんの少しのコンボミスとか、ジャンプやインパクトのような遅い行動を咎められないとか、コンボがほんの少し安いとか、ほんの少しの積み重ね。
