--- a/shared/art/tips/プラモデルを作る.md
+++ b/shared/art/tips/プラモデルを作る.md
@@ -19,3 +19,18 @@
 4. スプレー
 5. さらに凝った塗装
 6. 造形
+
+やすりは目の粗さによって違いがある。あとは形。
+目が粗いほど早く削れて、表面はざらざらになる。
+逆に目が細かいほど削るのに時間はかかるけど、表面は滑らかになる。
+何種類か使い分けて、目の粗いやすりでまず形を決めてから目の細かいやすりで仕上げるのが基本。
+形はまず平たいものとか紙やすりが基本。面を削る。必要に応じて角形や丸形のものもある。
+目の粗さは数字で規格化されていて、数字が小さいほど粗い。
+めんどくさかったら800くらいまでざっと削ってから塗料で隠す手もある。
+
+プラモを作る道具
+
+ニッパー
+
+ピンセット
+カッターナイフ
