--- a/shared/story/telling/tips/物語のリアリティ.md
+++ b/shared/story/telling/tips/物語のリアリティ.md
@@ -1,1 +1,5 @@
 ファンタジーやSFの世界で特にリアリティがないのは「エネルギーどこから供給されてる問題」がある。魔法とかも謎のエネルギーで動いてるし、ゾンビなんかも同じく。でもそういうもんとしか言えない。
+
+リアリティとは現実に即しているかどうかではなく、根拠があるかどうか。
+たとえば魔法のある世界でも、魔力というエネルギーとその変換や作用に関してあまり法則が考えられてないとリアリティがない。
+『野生のラスボスがあらわれた！』みたいに魔物が人を襲う背景があったりするとファンタジーでもリアリティがある。ちゃんと世界観の設定に裏付けがある。
