--- a/shared/success/trial/機会.md
+++ b/shared/success/trial/機会.md
@@ -41,3 +41,6 @@ Successの文脈におけるTimeの概念。
 逃してはいけないタイミングがあって、どうにか間に合わせないといけない期限がある。
 
 機会も成功という概念を考えないなら別になくてもいいっちゃいい。
+
+時間があっても機会がなかったら意味がない。
+何かやりたいことがあるなら、時間を作った後は機会を作らないといけない。
