--- a/shared/time/時間.md
+++ b/shared/time/時間.md
@@ -39,3 +39,6 @@ timeとluckは統合してもいいのかも。
 機会を資源として捉えた概念が時間。
 
 「アキレスと亀」が現実に起こらないのは、距離と同時に時間も無限長になって実質止まっているから。時間が止まることはないので、距離は縮まって、いずれ亀はアキレスに抜かれる。
+
+時間があっても機会、試行回数がなかったら意味がない。
+何かやりたいことがあるなら、時間を作った後は機会を作らないといけない。
