--- a/shared/art/tips/色をつける.md
+++ b/shared/art/tips/色をつける.md
@@ -4,3 +4,10 @@
 - 染料: 内部に染み込ませて染める
 
 https://youtube.com/watch?v=yqsnkULOsp8&si=6-9AKrIZLrj2yBez
+
+塗料はまず水性と油性があって、
+水性アクリジョン、
+水性アクリル、
+油性/水性エナメル、
+油性ラッカー、
+などがある。
