--- a/shared/job/hunting/就職活動.md
+++ b/shared/job/hunting/就職活動.md
@@ -3,3 +3,6 @@
 並行するのであれば、就職しても副業としてある程度続けられるような、週 1-2 くらいの仕事にする。
 
 就活する会社のどんな問題に対処できるか、ざっくり話せるといい。
+
+学生を卒業して最初の就活は社会人生活のスタートダッシュ。
+うまくいくと楽だけど、出遅れても終わりってわけではない。
