--- a/shared/story/telling/物語の展開.md
+++ b/shared/story/telling/物語の展開.md
@@ -7,3 +7,5 @@
 死んだと見せかける展開は他のキャラに助けられてたとか、本人によらない要因で生きている方が気づきにくい。
 
 創作だと色んな解釈ができるような引きにして、答えはわからない場合もある。考察の余地を残す。
+
+『水属性の魔法使い』なんかだと登場人物の直感ばかりでその裏付けがストーリー上にないから、ご都合展開というか、物語ありきで登場人物が動いているように感じる。登場人物の判断にもちゃんと根拠を物語として描写しないと説得力がない。
