--- a/shared/achievement/理想と現実.md
+++ b/shared/achievement/理想と現実.md
@@ -34,3 +34,6 @@
 そもそももっと良い環境の知識がないと理想を描けない。
 
 理想に向かう途中には山ほどの泥臭い現実がある。まずは現実、現場、現物に目を向けないといけない。
+
+現実を認めずに理想ばかりを追うのも馬鹿だが、理想通りになる場面なのに理想を捨てて最大値を取らないのも馬鹿だ。
+最大限の利益を得られる場面では最大限の利益を求めないといけない。
