--- a/shared/commerce/marketing/tips/質か量か.md
+++ b/shared/commerce/marketing/tips/質か量か.md
@@ -8,3 +8,6 @@
 何かの質が悪いのは量が少ないせい。母数を増やせばトップの質は良くなる。もちろん全体として見れば質が悪い部分も多くあるが、あとは消費者が選べばいいだけ。
 
 原則として量よりも質が重要。ただ、質を高めるためには量が必要。先に量があって、質がある。
+
+質が飽和すると量が求められる。生成AIなんかは出てきた時期がちょうどよかった。
+ただ、ここでいう量というのは、好みに合うかどうか。豊かさということ。多様な選択肢が増えることで、より好みに合うものが見つかりやすくなる、ある種の質。
