--- a/shared/culture/tips/文化を守る.md
+++ b/shared/culture/tips/文化を守る.md
@@ -11,3 +11,5 @@
 最初は誰しもニワカだ。
 
 文化を守るためにはニワカが増えないといけないが、ニワカを文化の担い手に育てるには一気に増えすぎても面倒見切れない。ニワカのまま流行が過ぎたら文化を守れない。
+
+文化の違いを残したまま共存するには、緩衝地帯が必要。日本みたいな文化的に寛容な地域とか、商業都市みたいに利益だけで文化を飲み込む地域とか。
