--- a/shared/education/教養.md
+++ b/shared/education/教養.md
@@ -52,3 +52,5 @@
 地位が高くなるほど広い教養が求められるのは、関わる人種が増えるから。たとえば経営者であれば自分の会社の社員だけでなく、他の会社の経営者や社員ともつながりがあるものだ。相手の文化に合わせられないと社交ができない。
 
 教養は教育というよりも社交のために必要なので、社交の文脈のほうがいいかも。
+
+立ち居振る舞いも教養の一部。
