--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -36,3 +36,5 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 
 「理性的である事で理解できなくなってしまうものもある。」
 『大魔導師と呼ばれた侯爵令嬢』
+
+ただ記憶しただけでは理解したとは言えない。それが必要な場面と関連づけて取り出せることが重要。
