--- a/shared/government/統治の要素.md
+++ b/shared/government/統治の要素.md
@@ -7,6 +7,11 @@
         - 他国を侵略する
   - 侵略戦争に勝つ
   - 経済競争に勝つ
+- 統治のコストを抑える
+  - 階層を作る
+    - 領土を分けて領主を置く
 
 統治において最も重要なのは経済。景気が良ければたいていの問題は見過ごされる。
 敵対感情なんかも利益には勝てない。
+
+階層を作った方が統治には便利。上位の統治者が見る範囲を簡単に区切って分担できる。国民の教育レベルが上がって統治に手間がかからなくなったら役所みたいに簡易な機能だけで足りる。
