--- a/shared/collaboration/organization/hierarchy/指示よりも教育.md
+++ b/shared/collaboration/organization/hierarchy/指示よりも教育.md
@@ -11,3 +11,9 @@
 
 教育を生業にするなら、ついてこれる生徒を増やさないといけない。
 ついてこれるやつだけついてくればいい、というスタイルでは顧客が限られてしまう。
+
+指示には手間がかかる。
+
+指示するには、対象の特性をよく知らないといけない。
+
+信頼関係がないと部下は上司の指示を聞かない。
