--- a/shared/collaboration/organization/組織の規模.md
+++ b/shared/collaboration/organization/組織の規模.md
@@ -15,3 +15,6 @@
 
 組織の規模が大きくなると、統治できずに崩壊する。
 規模を小さく保つ、ということも必要。
+
+20人くらいの組織ならサル山と同じくらいの感覚で特に統治システムがなくてもトップが全体に目を配れる。
+多くても100人くらいになると限界が来て、群れから逸れる個体が増える。群れから逸れた個体は、別の群れを作って元の群れと対立したり、死にやすくなったりする。群れの中でも争いが増える。
