--- a/shared/collaboration/organization/hierarchy/指示.md
+++ b/shared/collaboration/organization/hierarchy/指示.md
@@ -1,3 +1,5 @@
+# Command
+
 指示は結果やコンテキストではなく、どう動けばいいか指図しなければならない。意思決定を補佐する。
 十分な能力を持った相手に指示は必要ない。求める結果だけ共有すればいい。ただ、激しい動きを求められる場合に思考が制限されていると、指揮が有効になる時がある。
 
@@ -15,11 +17,11 @@
 
 指示や命令は instruction
 
-Command
-
 軍隊の隊長みたいな立場はCommander、指揮官。
 Commanderは指示を伝える仲介役で、別にえらいわけではない。電話みたいなもの。
 
 現代の仕事にCommanderは必要ない。メールも会議通話もあるし。
 
 Commanderは意思決定するDirectorと違って、単に上意下達している場合もCommanderだ。
+
+部下が指示を聞くように信頼関係を築くのは上司の仕事。部下が指示を聞かないのは上司の無能。
