--- a/shared/communication/frameworks/emotion/examples/怒りの表現.md
+++ b/shared/communication/frameworks/emotion/examples/怒りの表現.md
@@ -26,3 +26,5 @@ https://x.com/genmeisui/status/1804507285794038152?s=46
 相手に何かの行動をやめさせたいなら怒るより無視したほうがいい。正確には無視というより、何もフィードバックを与えない、というべきか。無視したことでフィードバックを与えてしまう場合は無視するだけでは足りない。
 
 怒りと恐れは似ている。
+
+怒るのは怖がっている証拠だ。
