--- a/shared/computer/software/development/ソフトウェア開発の流れ.md
+++ b/shared/computer/software/development/ソフトウェア開発の流れ.md
@@ -1,6 +1,7 @@
 企画などは製品開発の流れを踏襲する。
 
 - 企画
+  - 続行の判断
   - 使用する技術の選定
     - プログラミング言語
     - フレームワークやライブラリ
@@ -33,3 +34,5 @@
   - 広告
 - その他
   - ドキュメントの作成
+
+開発作業は、設計、実装、試験、整理、反映、までセットで扱う。どれかが欠けていたらタスクは完了してない。
