--- a/shared/management/performance/怠慢.md
+++ b/shared/management/performance/怠慢.md
@@ -18,3 +18,12 @@
 
 サボるかどうかは問題ではない。
 給料に見合った仕事をしていれば、どれだけ休んでも良い。
+
+怠ける人は前線に出すべきで、組織の上位からは下さないといけない。
+
+歳をとれば体力がなくなる。
+体力がなくなれば怠ける。
+
+上司が怠ければ部下も怠ける。
+
+組織のトップは誰よりも働かないといけない。
