--- a/shared/singing/tips/歌のリズムを取る.md
+++ b/shared/singing/tips/歌のリズムを取る.md
@@ -87,3 +87,5 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 
 まずは息だけでアクセントも含めたリズムと基礎のメロディを取る。
 この段階では息が漏れてもいいので、ハミングでもいい。慣れてきたら口を薄く開けて声帯で受け止める。
+
+sの発音で、60bpmのメトロノームを鳴らしながら、半拍、1拍、2拍、4拍、2拍、1拍、半拍、と拍子に合わせて息を吐く練習。sはずっと鳴ったまま、アクセントをつける。リズム感と呼吸を同時に鍛える。
