--- a/shared/training/努力.md
+++ b/shared/training/努力.md
@@ -72,3 +72,5 @@ https://www.youtube.com/watch?v=rTFLOSI5ZNI
 努力には無理がある。
 
 「人って基本的に頑張れないんですよね」（deriba）
+
+「努力は必ず報われる。報われない努力があるとすればそれはまだ努力とは言えない。」 （王貞治）
