--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -43,3 +43,5 @@
 恨みは恐怖を克服することが多い。恨みを買わずに、恐れさせる。
 
 敵を作らないためには、相手に損をさせないこと。特に名誉や信用を傷つけないこと。ただ、その上でこちらに弱みがあるなら損しない程度に搾り取る。
+
+戦争でもできるだけお互いの死傷者を減らす。恨みを買わないに越したことはない。ただ、生き残るために殺すこともある。
