--- a/shared/collaboration/organization/個人を守る.md
+++ b/shared/collaboration/organization/個人を守る.md
@@ -1,3 +1,5 @@
 メンバーが「自分を守る」ような環境は組織を腐らせる。組織は個人を守って、自分を守らなくても組織が守ってくれる、と思っていなければならない。
 
 チームの基本は、「仲間を守る」ために動くこと。仲間を守るチームが組み合わさって大きな部隊になる。仲間は自分を守る、という信頼の上に成り立つ。仲間を守れない、守らないメンバーは排除しなければならない。
+
+組織が個人を守らないのなら、個人は自分で自分を守って組織を見捨てる。
