--- a/shared/communication/media/language/語彙.md
+++ b/shared/communication/media/language/語彙.md
@@ -9,3 +9,6 @@
 使わない語彙が増えてもコミュニケーションはうまくならないが、思考には使える。
 
 言葉遣いが正確になるほど、逆におかしな語彙が出てこなくなる。言葉が出てくる条件が限定される。
+
+開いたクラスと閉じたクラスという分類もある。
+開いたクラスというのは、新しい語が追加されやすいグループ。逆に閉じたクラスは新しい語がほぼ追加されない。「〜です」「〜ます」「〜は」とかの語彙的に安定したところ。日本語だと無駄に語尾が追加されることもあるけど。
