--- a/shared/decision/優先順位.md
+++ b/shared/decision/優先順位.md
@@ -36,3 +36,5 @@ https://note.com/kenwagatsuma/n/naac8f4fa088c
 「重要でないが、緊急」というのは、締切は定められてるけど、その根拠がないタスク。上司が無能だとよくある。規則上は緊急なんだけど、別にやらなくても何もない。自分の判断で無視して締め切りを過ぎてもいい。
 
 何をやろうとしても後回しする、というのはありえない。後回しにされた何かの代わりにやっていることがあるはずだ。
+
+組織としては、自分にしかできないことを最優先にして、それを守れないなら他を諦める。自分以外にもできることは誰かがやってくれるのを信じるのもまた集団戦。
