--- a/shared/decision/判断を早くする.md
+++ b/shared/decision/判断を早くする.md
@@ -38,3 +38,5 @@
 判断を早くするということは、少ない情報で決断するということでもある。
 情報が少なすぎて判断の質が悪いと、判断が早くなってもうまくいかない。
 判断・行動が早くなるメリットと、判断の質を上げるメリットのトレードオフを考えないといけない。
+
+判断が遅れている場合、まずもっと小さな課題に分解してから一つ一つ判断していく。
