--- a/shared/discussion/meeting/会議.md
+++ b/shared/discussion/meeting/会議.md
@@ -213,3 +213,5 @@ https://www.amazon.co.jp/dp/B019O8NDNY
 
 会議の前に根回しを済ませる。
 会議ではサクッと意思決定して終われるようにする。
+
+会議や議論は民主的に判断を行う方法。あるいは御前会議のように決定する人がいて、その前で議論を戦わせて決定者が決めることもある。
