--- a/shared/government/君主制.md
+++ b/shared/government/君主制.md
@@ -1,3 +1,8 @@
+# Monarchy
+
 - 絶対君主制・専制君主制: 君主が政治的決定の全権を持つ
 - 立憲君主制・制限君主制: 君主が権力を持つが、憲法によって縛られる
   - 象徴君主制: 君主が政治に参加しない
+
+君主制は国民がバカでも国家を運営できる利点がある。
+民主制は国民の大半が政治や経済のことを考えないと成立しない。形だけ民主制を導入するだけでは意味がない。
