--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -38,3 +38,6 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 『大魔導師と呼ばれた侯爵令嬢』
 
 ただ記憶しただけでは理解したとは言えない。それが必要な場面と関連づけて取り出せることが重要。
+
+何かを理解する前に、対象の範囲を規定しないといけない。
+人間は全知ではないし、時間にも限りがある。
