--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -4,6 +4,7 @@
 身長の高い人ほど声は低くなりやすい。
 
 低音は声帯のサイズが関係しているので、どれだけ技術があっても限界がある。
+ただ、ほとんどの人は自分の最低音を出せてないと思っていい。
 
 低音は才能。
 喉の長さによって最低音も決まる。基本的に身長が高いほど声は低くなりやすい。
@@ -16,3 +17,13 @@
 身長165cmでもG2は楽に出るから、同じ身長の男でそれくらいの低音が出せないのは何かおかしい。
 
 ほとんどの人はちゃんと鍛えてないせいで低音が出にくい。
+
+1. 横隔膜を下げる
+2. 声帯を閉じる
+3. 下腹を押し上げて、声帯に圧がかかるのを感じる
+4. 声帯を少しずつ開く
+
+これで出たのが一番低い声。
+
+そのまま少しずつ大きな声にして、
+喉を上げずにピッチを上げてみる。
