--- a/shared/engagement/エンゲージメントが低い兆候.md
+++ b/shared/engagement/エンゲージメントが低い兆候.md
@@ -33,3 +33,5 @@ SNSの確認や書き込み
 https://x.com/sa_hayakawa/status/1815558585637884307?s=46
 
 結局、エンゲージメントが低いと仕事をサボるようになるからパフォーマンスが落ちる。全力を出さなくなる。
+
+エンゲージメントが高い兆候としては、所属する集団を褒められると自分も嬉しい、所属する集団を貶されると不快、など。
