--- a/shared/voice/training/tips/舌を鍛える.md
+++ b/shared/voice/training/tips/舌を鍛える.md
@@ -1,4 +1,4 @@
-舌を鍛える場合はlalalaをとにかく早く。あごは指を置いて、動いていたらやり方が間違っている。あごは動かさない。
+舌を鍛える場合はlalalaをとにかく早く。あごは唇の下に指を置いて、動いていたらやり方が間違っている。あごは動かさない。
 
 喉を動かさずに舌を動かせるようにする。
 
@@ -14,3 +14,5 @@ https://youtu.be/BY1hGrFNJuw?si=mSZNdYqjDyuDRoTp
 普段から舌が前歯の裏についてないのは舌が弱っている。もっと鍛えたほうがいい。
 前に真っ直ぐ出せないのも怪しい。
 https://youtu.be/BY1hGrFNJuw?si=aCgjU5QZaXt7CZUU
+
+舌が硬いと発音が発声の邪魔になる。
