--- a/shared/lifestyle/appliances/加湿器の選び方.md
+++ b/shared/lifestyle/appliances/加湿器の選び方.md
@@ -6,6 +6,11 @@
 - 湿度設定機能はあった方がいい
 - 掃除しやすい方がいい
 
+## おすすめ
+
+超音波式が無難。
+パワーが欲しいなら加熱式。
+
 ## 加湿方式の違い
 
 ### 加熱式
@@ -22,6 +27,7 @@
 - (+) 静か
 - (+) 電気代が安い
 - (-) 水が腐りやすい
+- (-) 蒸気を吐き出す力が弱く、滞留して床が濡れることがある
 
 ### 気化式
 
