--- a/shared/collaboration/organization/hierarchy/階層構造.md
+++ b/shared/collaboration/organization/hierarchy/階層構造.md
@@ -5,3 +5,7 @@
 階層があると、その分だけ間接的なコミュニケーションは増える。
 トップダウンの指示は伝わりづらくなって、ボトムアップの意思決定が重要になる。
 指示というよりはコンテキストを与えて教育する必要が出てくる。
+
+組織の階層を増やしすぎると伝達が遅くなって、結果的に組織全体の動きが遅くなる。動きが遅くて体が大きいだけの生物は狩られるだけの獲物でしかない。
+
+ヒエラルキーは組織というより統治かも。
