--- a/shared/voice/training/tips/小さな声を出す.md
+++ b/shared/voice/training/tips/小さな声を出す.md
@@ -15,3 +15,7 @@
 地声が勝手に大きくなってしまうのは息の支えが足りないのかも。もっと量を抑えないといけない。
 
 小声にも気の抜けたような軽い小声と、熱を押し殺したような重い小声がある。もっと種類を増やすこともできる。
+
+声が小さくてもしっかり地声で出す練習。
+息の量が多かったり、弱かったりすると裏声になる。
+あくまでも息の圧はしっかりかけて、地声で出せるようにする。
