--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -178,3 +178,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦争では勝たないと何も得られない。まずは負けないことが重要で、侵略するならさらに相手に勝つ必要がある。勝てないのに戦争しても資源を無駄に消耗するだけで終わる。
 
 戦争で必要な能力はまず守備、次に継戦、最後に攻撃。敵の攻撃を防ぎ続けるだけでも相手に継戦能力がなければ勝てる。どちらも継戦能力があるなら相手の防御を抜かないと勝てない。
+
+王族や貴族同士の暗殺合戦なら民には影響しない。指導者の暗殺は最も平和的な戦争だ。
