--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -198,3 +198,5 @@ https://diamond.jp/articles/-/49655
 普通、非公式な組織に大きな戦力はない。そもそも公権力と拮抗するほどの力があったら表でも好き勝手できる。漫画みたいに裏稼業に強い人がいるのはフィクション。
 
 システムがないなら組織とはいえない。
+
+兵法は組織のあり方そのものでもある。
