--- a/shared/collaboration/仕事を任せる.md
+++ b/shared/collaboration/仕事を任せる.md
@@ -110,3 +110,5 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 
 信用がない人を使うなら朝礼とかでその日のうちに何度か同期する時間を設けるといいけど、信用がある人にとっては無駄な時間でしかない。少なくとも、信用がある人に辞められるリスクを背負っていることは理解しておこう。
 信用がない人と信用がある人は完全に分けて使うべき。
+
+仕事を誰かに任せても責任がなくなるわけではない。手を借りても頭は変わらない。
