--- a/shared/music/tips/テンポ感を鍛える.md
+++ b/shared/music/tips/テンポ感を鍛える.md
@@ -1,2 +1,8 @@
 まずはメトロノームをひたすら鳴らして合わせるのが基本。
 ただ聞くだけでもいいし、手拍子とか太鼓とか叩いてもいい。足をトントンするとか。
+
+60bpmのメトロノームをずっと流してると速すぎてしんどくなってくるから50bpmくらいがいい。
+
+人の一般的な心拍数が60-100bpmくらい。
+
+テンポ感があると、他の曲と比較したりして初見の曲でもテンポが大体わかる。
