--- a/shared/society/社交性.md
+++ b/shared/society/社交性.md
@@ -1,3 +1,5 @@
+社交が上手いかどうか。
+
 他人との関係や集団生活をうまくやっていく素質。社交性。
 
 明確には定義されていないが、以下のような性質がよく挙げられる。
@@ -50,3 +52,11 @@ https://ja.wikipedia.org/wiki/%E7%A4%BE%E4%BC%9A%E6%8A%80%E8%83%BD
 「なぜ政治が良くならないのか」というのは、人間に社会性がないせい。特に1億人とかの規模になると厳しい。そもそも同じ家族の中ですら人間同士で協力して平和に生きられない。
 
 リアクションが小さいのが社交的にはよくないというか、向いてないと思ってる。
+
+人見知りの種類:
+
+- そもそも帰りたい
+- 何も喋れなくなる
+- 喋りすぎる
+- 話しかけられたら喋るけど、話しかけられない
+- 大人数だと喋らない
