--- a/games/Street-Fighter/Six/守りの選択肢.md
+++ b/games/Street-Fighter/Six/守りの選択肢.md
@@ -316,3 +316,5 @@ https://youtube.com/watch?v=y7n8JgLoj6Y&si=Jel770KXA5I6wWZl
 ここに普通の後ろジャンプ（端では前ジャンプ）を混ぜると相手も打撃を重ねることになって攻めの択が散る。なんなら中央でも相手側にジャンプして、後ろ下がりにめくりを狙ったりしてもいい。
 
 最速コパ、無敵技、遅らせ投げ抜け、ガード、だけだと投げとシミーだけでも崩せる。さらに中段とか混ぜられてもしんどい。ここにジャンプを混ぜるだけで相手も打撃を増やしたくなって攻めが散る。
+
+無敵技暴れは2/3くらい成功しないと厳しい。
