--- a/shared/finance/accounting/legal/tax/社会保険.md
+++ b/shared/finance/accounting/legal/tax/社会保険.md
@@ -1,3 +1,9 @@
 年金や健康保険の総称。
 
 退職して何年も休むつもりなら 6 月末に退職するのが社会保険的にはちょうどいい。
+
+社会保険料は 4 〜 6 月の給与等の支出額の平均を基準に決まる。
+退職してしばらく休むならこの期間に休むのが一番いい。
+また、この期間に反映される 3 〜 5 月に残業代を増やしてしまうと一年分の保険料が増える。
+
+https://biz.moneyforward.com/payroll/basic/39186/
