--- a/shared/finance/tips/財務を改善する.md
+++ b/shared/finance/tips/財務を改善する.md
@@ -1,9 +1,24 @@
 財務を改善するために変更できる要素には、単価、原価、販売数量、固定費の 4 つしかない。
 特に単価と原価。販売数量と固定費は影響が小さい。
 
+- 単価
+- 原価
+- 販売数量
+- 固定費
+
 日本では単価を上げない環境が長く続いたので、原価を下げるばかりになっている。
 
 単価を上げずに顧客の見えるところで原価を下げる（内容量を減らす）のは、不誠実だと思われる。
 
 売上を増やすために販売数量を増やそうとすると、在庫が増える。
 在庫が増えると経費も増えるので、売上と相殺されてしまってさらに販売数量を増やさないといけない悪循環に陥る。
+
+- 収入を増やす
+- 支出を減らす
+
+客単価を上げる
+
+商品の単価を上げても客単価が上がるとは限らない。安い商品に切り替えるかもしれない。また、客単価が上がっても別の店に乗り換えて客数が減るかもしれない。
+客単価は上がるというより、客数を最大化しつつ下げないことが重要。値引きは悪い影響が大きい。客の質も下がる。
+
+ビジネスで儲けるには、ゲームやルールを作る側にならないといけない。
