--- a/shared/finance/tips/資産を増やす.md
+++ b/shared/finance/tips/資産を増やす.md
@@ -15,3 +15,9 @@
 安定した高配当株としては、商社、銀行、不動産が定番。
 
 資産を増やすためには、資本が必要。金とか人とか、資産と交換できるもの。
+
+development も参照。
+
+自分で開発せずに、外部から購入・調達する場合もある。
+
+financeが近いかも。
