--- a/shared/finance/資産の例.md
+++ b/shared/finance/資産の例.md
@@ -35,3 +35,23 @@
 
 家族、特に子どもは老後を支えてくれる資産。
 ただ、関係が悪いと親が捨てられる可能性もある。
+
+## 地代
+
+誰かに貸して地代を払ってもらうのが定石。
+
+土地があればとりあえず自販機とか置くだけでも不労所得になる可能性はある。
+
+東京の土地は安いところでも 200-300 万円/坪くらい。
+
+土地の不労所得にも、そのまま貸す、看板や広告を出す、駐車場や駐輪場にする、など色々ある。
+
+溜め池は底の土が酸素不足になりやすい。たまに水を抜いて土を浚ってやらないと維持できない。
+
+関東の一軒家なら20-30坪くらいが平均。
+国分寺市とか120万円/坪でも20坪買うと2400万円になるので、なかなか手に入る資産ではない。
+
+君主というのは最後にその土地の所有権を奪った人なので、それ以外が真に土地を手に入れるにはクーデターするしかない。
+土地を買った人というのは結局地税を払っていて、君主から借りているだけ。
+
+君主や領主というのは結局地主でしかない。
