--- a/shared/entertainment/humor/ユーモア.md
+++ b/shared/entertainment/humor/ユーモア.md
@@ -238,3 +238,5 @@
 過ちを犯すからこそ魅力があるのかも。
 
 誤ちこそがユーモアの基礎。失敗や偏見が人間味になる。もっというと誤ちを認めること、誤ちに目を向けて、臭いものに蓋をしないこと。
+
+「誰かのため」だと思って行動してる人に「あなたがそうしたいんでしょ？」みたいに問いかけるのもユーモア。新たな視点を提供する。
