--- a/shared/finance/tips/収入を安定させる.md
+++ b/shared/finance/tips/収入を安定させる.md
@@ -1,3 +1,6 @@
+- 資産を増やす
+- 貯蓄する
+
 収入が安定していれば、予定を立てて支出を管理しやすい。
 
 収入源によって安定性が異なる。
@@ -11,3 +14,14 @@
 定期収入があると生活の不安はなくなるから、収入の範囲なら支出で悩まなくていい。収入の範囲ならいずれ補填される。
 
 安定収入があっても、大きくなるために足りないなら、不安定でも稼ぎの大きいビジネスが必要になる。並行して進める。
+
+リスクが高い収入と低い収入にざっくり分ける。
+
+- 場合によっては損失が出る
+- 場合によっては利益がなくなる
+
+この二つは分けて考える。
+
+労働も含めて、安定収入はリスクが低くないと意味がない。経済的な損だけじゃなくて、健康的、社会的な面もある。
+
+成果報酬よりは時間報酬の方が安定する。失敗のリスクがない。
