--- a/games/Street-Fighter/Six/リソースの管理.md
+++ b/games/Street-Fighter/Six/リソースの管理.md
@@ -12,6 +12,8 @@
 
 体力が減るのに怯えて攻めの機会が減ったら元も子もない。
 
+体力ゲージもリソースの一つ。全く被弾しないよりは、体力もギリギリまで使い切って勝つくらいでいい。体力を使って相手の情報を集めたり、リスクの高い攻めを狙ったりする。
+
 ## 相手の体力
 
 相手の体力が減ってきたら、今あるリソースで倒し切れるコンボを意識する。
