--- a/shared/people/influence/人を動かす.md
+++ b/shared/people/influence/人を動かす.md
@@ -1,3 +1,5 @@
+人を動かすのは理よりも情。
+
 人を動かすには、人を知らないといけない。
 
 人を動かすなら、より少ない人数から始めた方がいい。
@@ -20,3 +22,5 @@
 いや、女性というよりは、一人で自立してない人、他人に肯定してもらわないとやっていけない人、というべきか。
 
 女性には「いつもどれだけ助けられているか」「どれだけ一緒にいたいと思っているか」をうまく伝える。
+
+計算高いのは別に部下でもできる。上司は情が強くないといけない。
