--- a/shared/collaboration/organization/hierarchy/上司の素質.md
+++ b/shared/collaboration/organization/hierarchy/上司の素質.md
@@ -1,1 +1,14 @@
+## Bad
+
+- 器が小さい
+  - 人間が嫌い
+  - ムードが悪い
+    - ユーモアがない
+- 知能が低い
+  - 多くの情報を扱えない
+
+## メモ
+
 知能が低い上司は部下から上がってきた現場の情報をうまく処理できない。上位の上司ほど知能が高い者を配置しないといけない。
+
+優秀でもムードが悪い人は上司にするべきではない。組織ではまずムードが良くないと良い仕事はできない。まっすぐで気難しい人は職人や兵士向き。おおらかで器の大きい人を上司にする。
