--- a/shared/government/君主制.md
+++ b/shared/government/君主制.md
@@ -6,3 +6,15 @@
 
 君主制は国民がバカでも国家を運営できる利点がある。
 民主制は国民の大半が政治や経済のことを考えないと成立しない。形だけ民主制を導入するだけでは意味がない。
+
+君主制国家においては国民が政治を知らなくても君主が政治を行う。しかし、国民に責任がないわけではない。愚かな君主は国民の手で殺さないと、自分たちが飢えに苦しんだり戦争に駆り出されたりする。
+
+## 象徴君主制
+
+君臨すれども統治せず。
+
+象徴天皇制や立憲君主制は、「君臨」と「統治」を分離したのが革命的。
+「権威」と「権力」の分離でもある。
+
+王は象徴としての役割だけを持って、政府や統治に関わらない。
+他国の王族と外交して仲を深めたりはする。
