--- a/shared/hobby/趣味.md
+++ b/shared/hobby/趣味.md
@@ -1,3 +1,5 @@
+こだわりを追求すること。
+
 幸福のために趣味を持っておくといい。
 趣味の方向性も、健康のためだったり、愛情のためだったり、達成のためだったりする。
 
@@ -39,3 +41,5 @@
 部屋の中に好きなものを飾ったり好みの家具や家電で揃えたりするのも趣味。部屋の内装にこだわっている。
 
 こだわりがないということは、執着がないということ。
+
+キャンプなんかはこだわるポイントがいくらでもある総合的な趣味。料理や焚き火、キャンプ場選び、季節、アクティビティ、など。設営でキャンプ道具をどこに配置するか、なんかもこだわればキリがない。
