--- a/shared/life/老い.md
+++ b/shared/life/老い.md
@@ -7,3 +7,5 @@
 年老いるほど感覚が鈍くなって反応が悪くなる。最後には全く反応しなくなって土に帰る。
 
 過去にどれだけ偉業を成し遂げた人でも、80-90超えたらもうただのボケたおじいちゃんおばあちゃんでしかない。期待するのは酷というもの。
+
+歳をとるほど不調の日が増えるので、不調や疲労に気づけるような習慣があるといい。足ツボマットなんかも役割としては近い。
