--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -27,3 +27,8 @@
 
 そのまま少しずつ大きな声にして、
 喉を上げずにピッチを上げてみる。
+
+「低音は才能」と言われるが、才能とは喉の長さのことで、ほとんど身長が高いほど喉も長くなる。
+つまり、同じ身長の人と同じくらい低い声が出せないなら、努力が足りてないということ。
+
+低い声を出すには、息を漏らしてはいけない。息を漏らすと声は高くなる。
