--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -1,4 +1,22 @@
-# 低音域を広げる
+# 低い声を出す
+
+## 才能
+
+- 声帯が大きい
+- 声道が長い (≒ 身長が高い)
+
+ただし、声道は喉が上がっていると短くなる。
+最大まで喉を下げて、息を漏らさずに発声して、ようやく自分の最低音がわかる。
+
+身長165cmの男でもG2は楽に出るから、同じ身長の男でそれくらいの低音が出せないのは何かおかしい。
+
+## コツ
+
+- 喉を上げない
+- 喉に力を入れない
+- 息を漏らさない
+
+## その他
 
 まず、地声は声道が長いほど低くなる。
 身長の高い人ほど声は低くなりやすい。
@@ -7,14 +25,13 @@
 ただ、ほとんどの人は自分の最低音を出せてないと思っていい。
 
 低音は才能。
+ただし、ほとんどの人は才能と関係なく低音が出るほど鍛えてない。
 喉の長さによって最低音も決まる。基本的に身長が高いほど声は低くなりやすい。
 ただ、その人の最低音がまだ出ていないならまだ低くなる可能性はある。
 
 声帯を伸ばしていない、基準の状態が一番低い音であるべき。
 
 喉を下げて、空間が広がるほど低い声になる。
-
-身長165cmでもG2は楽に出るから、同じ身長の男でそれくらいの低音が出せないのは何かおかしい。
 
 ほとんどの人はちゃんと鍛えてないせいで低音が出にくい。
 
@@ -24,6 +41,7 @@
 4. 声帯を少しずつ開く
 
 これで出たのが一番低い声。
+発声時に喉を上げてはいけない。鏡を見ながら試すといい。
 
 そのまま少しずつ大きな声にして、
 喉を上げずにピッチを上げてみる。
