--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -1,4 +1,11 @@
-# 高音域を広げる
+# 高い声を出す
+
+## 才能
+
+- 声帯が小さい (男性より女性の方が小さい)
+- 声道が短い (≒ 身長が低い)
+
+## その他
 
 高い声は練習で出せるようになる。
 
@@ -95,3 +102,8 @@
 
 通常、歌で1音のために使う音は4音くらいしかない。１オクターブ以内に収まる。コードに含まれる音。
 まずはそのコードに合わせた声のテンションにして、その中で声帯を伸縮させて声を出す。
+
+声帯がよく伸びるほど高い音になる。
+
+ホイッスルボイスは特殊。
+声帯というよりは、声道全体でうまいこと鳴らす感じ。
