--- a/shared/game/theory/ルールを作る.md
+++ b/shared/game/theory/ルールを作る.md
@@ -8,3 +8,7 @@
 例えばカタンのようなゲームでも、周りと独自のルールを作って裏工作したほうが強い。ルールを守るだけでなく、作る側に回る。
 
 まず守りやすいルールが良いルール。
+
+勝ち組と負け組は、仕組みを作る方か仕組みに従う方かで決まる。
+
+仕組みに逆らうよりは従う方が利益を得られる場合が多い。
