--- a/shared/computer/programming/tips/コーディングを学ぶ.md
+++ b/shared/computer/programming/tips/コーディングを学ぶ.md
@@ -41,3 +41,6 @@
 [なぜ僕は公式ドキュメントを読むのが苦手なのか #初心者 - Qiita](https://qiita.com/nakampany/items/91d77f1b87278ed40e81)
 
 https://learn.grasshopper.app/
+
+開発系の研修資料をまとめているノート。
+https://x.com/developer_quant/status/2001269642887836115?s=46
