--- a/shared/computer/programming/コーディング.md
+++ b/shared/computer/programming/コーディング.md
@@ -94,3 +94,6 @@ https://speakerdeck.com/munetoshi/code-readability?slide=165
 実装には紙芝居などのモックアップも含まれるし、設定ファイルを用意したり、テストしたりするのも実装に含まれる。
 
 テストによって仕様を満たしたかどうか確認しないと「実装した」とは言えない。
+
+アルゴリズムとデータ構造、あとはそれを表現するコードが大きなところ。
+コードは特に大きなレベルのアーキテクチャと細かい設計やパターン、さらに細かいフォーマットの問題がある。
