--- a/shared/information/情報を絞る.md
+++ b/shared/information/情報を絞る.md
@@ -15,3 +15,5 @@
 情報過多でパニックになると、自分の頭で考えられなくなる。感情的になって、話を聞かなくなる。恐怖によって、まず自分の身を守ろうとする。
 
 コミュニケーションにおいては、相手に必要な情報を渡さないのは悪。
+
+情報を絞る場合、相手をよく知っておかないと必要な情報まで省いてしまう。逆に、もう知っている情報を伝えてしまうこともある。
