--- a/shared/lifestyle/meal/楽な昼食.md
+++ b/shared/lifestyle/meal/楽な昼食.md
@@ -1,10 +1,22 @@
+## 軽め
+
 - カップ麺
-- レトルトカレー
 - クッキーやビスケット
 - プロテインドリンク
 - フリーズドライのスープ
 - パン
 - おにぎり
-- 冷凍唐揚げ
+- ライスバーガー
+
+## 重め
+
+- パスタ
+- レトルトカレー
+- 冷凍弁当
+- 冷凍食品
+
+## その他
 
 昼は食べずに昼寝してからおやつでもいいかも。
+
+業務スーパーのライスバーガーとか軽めだし、カップ麺と同じくらいの値段。
