--- a/shared/production/tips/外注.md
+++ b/shared/production/tips/外注.md
@@ -17,3 +17,5 @@
 まず、手直しが絶対に入るし、なんならボツになることもある。ボツになった場合の最低保証と成功報酬、あとは2回の手直し費用くらい？やりとりが2回を超えたらボツにするか、追加費用とか。
 
 前の会社で仕事を受ける時の1人月は、80万円、100万円、120万円の3段階だった。
+
+最近は下請けしてた会社が本社を超えてしまって、シェアを取られたりもはや買収されたりすることもある。レノボとかルンバとか。
