--- a/shared/computer/science/計算機科学.md
+++ b/shared/computer/science/計算機科学.md
@@ -35,3 +35,8 @@
 - ソフトウェア工学
 - 集積回路設計
 - など
+
+そもそも「計算」は、コンピュータに与えられた情報になんらかの処理を加えて、なんらかの情報を出力すること。
+その処理の基礎になるのが計算機科学。
+コンピュータの動作そのものであったり、その上で使われるアルゴリズムやデータ構造が特に重要。
+OSやデータベースのような個々のミドルウェアまで手を伸ばすこともある。
