--- a/shared/computer/programming/languages/プログラミング言語の水準.md
+++ b/shared/computer/programming/languages/プログラミング言語の水準.md
@@ -6,3 +6,5 @@
 
 ジョーク言語として、Esoteric (難解な) 言語と呼ばれる分野もある。あえて難解な言語にしてある。
 Space, Tab, Returnだけでコードを書く"Whitespace"なんかが代表的。
+
+最初の高級言語はFORTRANで、数学的な式が使えるようになったのはこの頃から。
