--- a/shared/computer/programming/コーディングの関連作業.md
+++ b/shared/computer/programming/コーディングの関連作業.md
@@ -1,7 +1,18 @@
-- アルゴリズムやデータ構造の利用・開発
+- 仕様の検討
+  - アルゴリズムやデータ構造の作成
+  - アルゴリズムやデータ構造の評価
+    - アルゴリズムの正確さ
+    - 計算量の評価
+    - リソースの消費量の評価
+- プログラミング言語を用いたコードの作成
+- コードのリファクタリングや設計
+- コードのメンテナンス
 - テスト
 - デバッグ
-- コードのリファクタリングや修正
 - ビルドシステムの構築
+- ビルド
 - 生成されたアーティファクトの管理
-- など
+- 設計資料の作成
+
+大きく分けると、仕様を満たすための実装を考えて、それをコードに落とし込んで、コンピュータで実行できる状態にする、という流れ。
+あとはコードを修正しやすいようにアーキテクチャを考えたり、コードを履歴管理したり、ビルドシステムを構築したり、関連資料を残したり。
