--- a/shared/technology/engineering/工学.md
+++ b/shared/technology/engineering/工学.md
@@ -1,4 +1,4 @@
-# 工学 Engineering
+# Engineering
 
 工学の基本は「工程を改善する」こと。
 
@@ -71,3 +71,7 @@
 エンジニアリングは製品そのものの技術も必要だし、製品に応用される基礎分野の知識も必要。かなり総合的な技能が求められる。
 
 メンバーが少ないと専門を分けにくい。全員がそれなりに同じ仕事ができる百姓みたいな体制になりやすい。
+
+エンジニアリングと開発は近いが、エンジニアリングとしては開発するだけではなくてすでに開発された技術を使う面もある。
+
+工学や工業のベースにはなんらかの「工程」がある。
