--- a/shared/computer/programming/コーディング.md
+++ b/shared/computer/programming/コーディング.md
@@ -97,3 +97,6 @@ https://speakerdeck.com/munetoshi/code-readability?slide=165
 
 アルゴリズムとデータ構造、あとはそれを表現するコードが大きなところ。
 コードは特に大きなレベルのアーキテクチャと細かい設計やパターン、さらに細かいフォーマットの問題がある。
+
+動作やフォーマットはテストやリントで保証できるけど、アーキテクチャなど設計の面は評価するのが難しい。
+そもそもコード以前のモデリングの段階で問題がある場合もある。
