--- a/shared/pain/弱者.md
+++ b/shared/pain/弱者.md
@@ -1,4 +1,5 @@
 「本当の弱者は助けたくなるような見た目をしていない」（出典不明）
+医療や福祉の格言。弱者を切り捨てる言葉というよりは、弱者の中でも「救われる弱者」と「救われない弱者」に分かれて、「救われない弱者」が本当の弱者という意味。
 
 弱者は抵抗しなければならない。
 弱者が抵抗することもなくなったらエサにされるだけだ。
@@ -21,3 +22,10 @@
 
 弱者は怠惰である。
 ただ、栄養面でコストを抑えないといけなくて、仕方ない場合もある。
+
+弱者は誰かに助けてもらえるような生き方をしないといけない。
+最低でも「救われる弱者」であれば、「救われない弱者」よりはマシになる。
+
+医療の世界では伝染病の患者を助けないと伝染病が広まるし、福祉の世界では貧困層を助けないと暴動が起きるので、救われない弱者を拾い上げることが重要になる。ただ、それは別に弱者のためではない。
+
+弱者として生きるには、まず自分が弱者であることに気づいて受け入れないといけない。
