--- a/shared/pain/弱者.md
+++ b/shared/pain/弱者.md
@@ -27,5 +27,6 @@
 最低でも「救われる弱者」であれば、「救われない弱者」よりはマシになる。
 
 医療の世界では伝染病の患者を助けないと伝染病が広まるし、福祉の世界では貧困層を助けないと暴動が起きるので、救われない弱者を拾い上げることが重要になる。ただ、それは別に弱者のためではない。
+まぁ、伝染病や平等だけなら全員死ねば解決するけど、殺してしまうと恨みや恐れが広まるのもよくないし、経済的には弱者であっても死に過ぎると消費が減って経済全体が弱くなるし。
 
 弱者として生きるには、まず自分が弱者であることに気づいて受け入れないといけない。
