--- a/shared/war/tips/恐怖を与える.md
+++ b/shared/war/tips/恐怖を与える.md
@@ -23,3 +23,5 @@
 国に恐怖を与えるには、ある程度の人数を語り部として生かさないといけない。情報が拡散されてこそ国単位の恐怖になる。
 
 恐怖を与えるには、結果だけを見せるよりも過程までしっかり見せるのが効果的。
+
+恐怖を与えても恨みを買ってしまうと、恐れよりも恨みの方が強い。相手が殺しにくるのは失敗。
