--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -48,3 +48,5 @@ Wealth は福利や福祉の意味がある。
 誰かに守られること。
 
 政府の福祉は国の安定のために仕方なくやっていることで、本来の福祉は自ら進んで手に入れるもの。家族や友人を普段から助けておいて、自分が困ったら助けてもらう。お金を貯めておいて、いきなり仕事がなくなってもしばらく生きられるようにしておく。
+
+福祉が当たり前のものだと考えてはいけない。
