--- a/shared/computer/programming/コーディングの関連作業.md
+++ b/shared/computer/programming/コーディングの関連作業.md
@@ -16,3 +16,9 @@
 
 大きく分けると、仕様を満たすための実装を考えて、それをコードに落とし込んで、コンピュータで実行できる状態にする、という流れ。
 あとはコードを修正しやすいようにアーキテクチャを考えたり、コードを履歴管理したり、ビルドシステムを構築したり、関連資料を残したり。
+
+1. 要求分析
+2. モデリング
+3. コーディング
+4. ビルド
+5. テストやデバッグ
