--- a/shared/technology/engineering/工学.md
+++ b/shared/technology/engineering/工学.md
@@ -75,3 +75,7 @@
 エンジニアリングと開発は近いが、エンジニアリングとしては開発するだけではなくてすでに開発された技術を使う面もある。
 
 工学や工業のベースにはなんらかの「工程」がある。
+
+工学はただ作るだけじゃなくて、売ることも入るのかも。あるいは価値を高める、という視点。
+
+UIとか使い勝手、ビジネス的な価値やリリースなんかの考え方はエンジニアリング。
