--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -805,3 +805,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 自分の得点ができるだけ高くなるようにスコアアタックをする人と、周りと比べて高くなるように対戦する人では、前者のほうがリスクを取っていて、勝てば大きく勝つ。ビジネスで必要なのは前者。ただ、失敗する人も多い。
 
 ビジネスは常に「誰のための仕事か」を問い続けなければならない。
+
+やりたいことよりも、できることをビジネスにする。
+やりたいこととできることが一致するとなお良い。
