--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -103,3 +103,7 @@ businessやcommunityも社会の一部。
 「郷に入りては郷に従え」
 
 「来るもの拒まず」は「郷に入りては郷に従え」ができる人に限る。
+
+ビジネスや社交の基礎は、自分を知って、他人も知ること。
+自分を知るためには他人と比べるのが簡単。
+他人から言われて自分の特徴に気づくこともある。
