--- a/shared/development/自分を知る.md
+++ b/shared/development/自分を知る.md
@@ -7,3 +7,22 @@
 「頑張れば何かが見えるとそう思いますか　配点（自分）」『境界線上のホライゾン』
 
 自分を知る過程で、他人をどうやって、あるいは何を知ればいいかもわかる。
+
+1. 価値観を考える
+   1. 最高に満たされた瞬間を思い出す
+      1. 喜んだこと
+      2. ワクワクしたこと
+      3. 時間を忘れて熱中したこと
+   2. 許せないことを考える
+      1. 怒ったこと
+      2. 悲しんだこと
+   3. やりたくないことを考える
+2. 客観的に見る
+   1. 誰かに頼られたこと
+   2. 誰かに言われたこと
+   3. 仕事で担当していたこと
+3. 記録を残す
+   1. 毎日の習慣を書き出す
+   2. 感情の動きを記録する
+
+もしお金も時間も無限にあり、誰からも評価される必要がないとしたら、何をするか。
