--- a/shared/wealth/社会福祉.md
+++ b/shared/wealth/社会福祉.md
@@ -1,3 +1,7 @@
+福祉政策。
+
+そもそも社会福祉は社会の治安や成長を守るための活動で、別に弱者のためではない。
+
 働けなくなっても、生きるだけなら生活保護か刑務所でなんとかなる。
 
 障害や生活保護に「働け」と言っていいのは「うちで働け」と言える人だけ。それ以外は責任感のないクズなのでその言葉に価値はない。
